--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,80 @@ header{
     font-size: 0.9rem;
 }
 
-
-
 /****** Roadmap end *******/
+
+
+/****** Articles *******/
+
+.articles-content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+}
+
+.articles-box{
+    position: relative;
+    width: 100%;
+    height: 320px;
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+.articles-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.articles-overlay{
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: hsl(234, 45%, 16%, 0.7);
+    /* color: var(--main-color); */
+}
+
+.articles-overlay h2{
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.articles-overlay .bx{
+    font-size: 24px;
+    padding: 10px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    border-radius: 4px;
+}
+
+.articles-overlay .bx:hover{
+    background: #546eff;
+    transition: 0.3s all linear;
+}
+
+.articles-box:hover .articles-overlay{
+    top: 0;
+    transition: 0.3s ease;
+}
+
+
+/****** Articles end *******/
+
+
+
+/****** Community *******/
+
+
+
+
+
+
+/****** Community end *******/
