--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,122 @@ header{
 }
 
 
-
-
-
 /****** Community end *******/
+
+/****** Reviews *******/
+
+.reviews{
+    max-width: 750px;
+    margin: auto;
+    width: 100%;
+}
+
+.review-box{
+    max-width: 550px;
+    margin: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 3.5rem !important;
+}
+
+.review-box .bx{
+    font-size: 2rem;
+    color: var(--main-color);
+    margin-bottom: 0.5rem;
+}
+
+.review-box .review-text{
+    font-size: 0.89rem;
+    margin-bottom: 1rem;
+}
+
+.review-profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.review-profile h2{
+    font-size: 1.1rem;
+    line-height: 1.3rem;
+    color: var(--main-color);
+    font-weight: 600;
+}
+
+.review-profile span{
+    font-size: 0.84rem;
+    margin: 0.5rem 0 0 0.7rem;
+}
+
+.review-box img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 2px solid var(--main-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    object-fit: cover;
+    object-position: center;
+}
+
+.swiper-pagination-bullet{
+    width: 6px !important;
+    height: 6px !important;
+    border-radius: 0.2rem !important;
+    background: var(--bg-color) !important;
+    opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active{
+    width: 1.5rem !important;
+    background: var(--main-color) !important;
+}
+
+
+/****** Reviews end *******/
+
+/****** Subscribe *******/
+
+.subscribe-form{
+    max-width: 650px;
+    margin: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.subscribe-form input{
+    border: none;
+    outline: none;
+    font-size: 0.9rem;
+    padding: 15px;
+    color: var(--bg-color);
+    background: var(--box-color);
+    border-radius: 0.4rem;
+}
+
+.subscribe-form .email{
+    width: 80%;
+}
+
+.subscribe-form .subscribe-btn{
+    width: 120px;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 12px;
+    background: var(--main-color);
+    cursor: pointer;
+}
+
+.subscribe-form .subscribe-btn:hover{
+    background: #546eff;
+    transition: 0.3s all linear;
+}
+
+/****** Subscribe end *******/
